--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <table>
       <thead>
         <tr>
-          <th rowspan="2">Ramazon oyining kuni</th>
+          <th rowspan="2">Safar oyining kuni</th>
           <th rowspan="2">Hafta kunlari</th>
           <th colspan="2">Bomdod</th>
           <th colspan="2">Peshin</th>
@@ -36,7 +36,7 @@
         <tr>
           <td>1</td>
           <td>Payshanba</td>
-          <td>03:33</td>
+          <td>03:34</td>
           <td>04:20</td>
           <td>05:04</td>
           <td>12:14</td>
